--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/vuetify",
     "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^2.0.0",
     "vue-clipboards": "^1.3.0",
