--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/vuetify": "1.9.0",
     "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^2.0.0",
     "vue-clipboards": "^1.3.0",
-    "vue-head": "^2.1.2"
+    "vue-head": "^2.1.2",
+    "@nuxtjs/vuetify": "^1.0.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.2.0",
+    "@nuxtjs/vuetify": "^1.0.0",
     "raw-loader": "^3.1.0"
   }
 }
