--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nuxt": "^2.0.0",
     "vue-clipboards": "^1.3.0",
     "vue-head": "^2.1.2",
-    "@nuxtjs/vuetify": "^1.0.0"
+    "@nuxtjs/vuetify": "^1.0.0",
+    "raw-loader": "^3.1.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
